# niepce

./: .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  Cargo.toml  README  README.md  config.h.meson.in  configure.ac  meson.build  meson_options.txt  niepce.cmb
crates/npc-craw/: Cargo.toml  build.rs
crates/npc-craw/src/: image_bitmap.rs  lib.rs  pipeline.rs  render_worker.rs
crates/npc-craw/src/pipeline/: mod.rs  ncr.rs  rt.rs
crates/npc-engine/: Cargo.toml  build.rs
crates/npc-engine/examples/: copy_importer.rs  importlr.rs
crates/npc-engine/src/: catalog.rs  db.rs  importer.rs  lib.rs  library.rs  libraryclient.rs
crates/npc-engine/src/catalog/: album.rs  db.rs  filebundle.rs  keyword.rs  libfile.rs  libmetadata.rs  props.rs
crates/npc-engine/src/db/: album.rs  filebundle.rs  fsfile.rs  keyword.rs  label.rs  libfile.rs  libfolder.rs  libmetadata.rs  library.rs  props.rs
crates/npc-engine/src/importer/: camera_importer.rs  directory_importer.rs  imported_file.rs  libraryimporter.rs  lrimporter.rs
crates/npc-engine/src/libraryclient/: clientimpl.rs  clientinterface.rs  host.rs  ui_data_provider.rs
crates/npc-fwk/: Cargo.toml  build.rs
crates/npc-fwk/src/: base.rs  capi.rs  lib.rs  toolkit.rs  utils.rs
crates/npc-fwk/src/base/: date.rs  debug.rs  executor.rs  fractions.rs  geometry.rs  indexed_map.rs  moniker.rs  path_tree.rs  propertybag.rs  propertyvalue.rs  rgbcolour.rs  signals.rs  worker.rs
crates/npc-fwk/src/toolkit/: app_controller.rs  assistant.rs  channels.rs  clickable_cell_renderer.rs  combo_model.rs  configuration.rs  confirm.rs  controller.rs  gdk_utils.rs  gphoto.rs  gtk_utils.rs  heif.rs  image_bitmap.rs  list_view.rs  map_controller.rs  mimetype.rs  movieutils.rs  request.rs  resources.rs  thumbnail.rs  tree_view.css  tree_view_model.rs  uicontroller.rs  undo.rs  widgets.rs  window_controller.rs
crates/npc-fwk/src/utils/: exempi.rs  exiv2.rs  files.rs  test3.xmp
crates/npc-python/: Cargo.toml  gresource.xml  meson.build
crates/npc-python/src/: editor.blp  editor.rs  engine.rs  lib.rs  python.rs
crates/rtengine/: Cargo.toml  build.rs
crates/rtengine/src/: bridge.rs  image.rs  lib.rs  npc_rtengine.cpp  npc_rtengine.h  params.rs  processing.rs
data/: Makefile.am  meson.build  net.figuiere.Niepce.metainfo.xml.in.in  net.figuiere.Niepce.xml.in  org.gnome.Niepce.appdata.xml.in  org.gnome.Niepce.desktop.in  org.gnome.Niepce.desktop.in.in  org.gnome.Niepce.metainfo.xml.in.in
data/icons/: meson.build
doc/: Makefile.am  building.md  catalog.md  code-organization.md  contributing.md  database.md  database.txt  database_upgrade.md  design_philosophy.md  meson.build  previewer.md  style-guide  xmp.md
niepce-main/: Cargo.toml  build.rs  meson.build
niepce-main/examples/: widget-test.rs
niepce-main/src/: config.rs.in  lib.rs  libraryclient.rs  meson.build  modules.rs  notification_center.rs  python.rs
niepce-main/src/import/: mod.rs
niepce-main/src/libraryclient/: clientimpl.rs  clientinterface.rs  host.rs  ui_data_provider.rs
niepce-main/src/modules/: darkroom.rs  map.rs  mod.rs
niepce-main/src/modules/darkroom/: dr_item.rs  image_canvas.rs  toolbox_controller.rs
niepce-main/src/niepce/: gresource.xml  ui.rs
niepce-main/src/niepce/ui/: content_view.rs  dialogs.rs  film_strip_controller.rs  grid_view_module.rs  image_grid_view.rs  image_list_item.rs  image_list_store.rs  image_selectable.rs  imagetoolbar.rs  library_cell_renderer.rs  library_module.rs  metadata_pane_controller.rs  module_shell.rs  module_shell_widget.rs  niepce_application.rs  niepce_window.blp  niepce_window.rs  preferences_dialog.rs  selection_controller.rs  thumb_nav.rs  thumb_strip_view.rs  workspace_controller.rs
src/: Makefile.am  meson.build  rust_bindings.hpp
src/engine/: Makefile.am  meson.build
src/engine/db/: label.hpp  libfile.hpp  libmetadata.cpp  libmetadata.hpp  properties.cpp
src/engine/importer/: cameraimporter.cpp  cameraimporter.hpp  directoryimporter.cpp  iimporter.hpp
src/ext/: Makefile.am
src/fwk/: Makefile.am  cxx_prelude.hpp  meson.build
src/fwk/base/: Makefile.am  date.cpp  date.hpp  geometry.cpp  geometry.hpp  map.hpp  propertybag.cpp  propertybag.hpp  string.hpp
src/fwk/base/t/: testgeometry.cpp
src/fwk/toolkit/: Makefile.am  appframe.hpp  application.cpp  application.hpp  configdatabinder.cpp  configdatabinder.hpp  configuration.cpp  configuration.hpp  controller.cpp  controller.hpp  dialog.cpp  dialog.hpp  dockable.cpp  frame.cpp  frame.hpp  gdkutils.cpp  gdkutils.hpp  gphoto.cpp  gphoto.hpp  gtkutils.cpp  mapcontroller.cpp  mapcontroller.hpp  metadatawidget.cpp  metadatawidget.hpp  mimetype.cpp  notificationcenter.cpp  notificationcenter.hpp  uicontroller.cpp  uicontroller.hpp  uiresult.hpp  undo.hpp
src/fwk/toolkit/t/: testconfigdatabinder.cpp
src/fwk/toolkit/widgets/: addinstreemodel.cpp  addinstreemodel.hpp  dock.cpp  dock.hpp  editablehscale.cpp  editablehscale.hpp  tokentextview.cpp
src/fwk/utils/: Makefile.am  exempi.cpp  exempi.hpp  files.cpp  files.hpp  init.cpp  modulemanager.cpp  pathutils.cpp  pathutils.hpp
src/fwk/utils/t/: testpathutils.cpp
src/libraryclient/: Makefile.am  libraryclient.cpp  libraryclient.hpp  uidataprovider.cpp  uidataprovider.hpp
src/ncr/: image.cpp  image.hpp  init.hpp  meson.build
src/niepce/: Makefile.am  gresource.xml  lnlistener.hpp  main.cpp  meson.build  notificationcenter.hpp
src/niepce/modules/: Makefile.am
src/niepce/modules/darkroom/: Makefile.am  darkroommodule.cpp  (+6 more)
src/niepce/ui/: Makefile.am  filmstripcontroller.cpp  filmstripcontroller.hpp  gridviewmodule.cpp  gridviewmodule.hpp  ilibrarymodule.hpp  imageliststore.cpp  imageliststore.hpp  imoduleshell.hpp  metadatapanecontroller.cpp  metadatapanecontroller.hpp  moduleshell.cpp  moduleshell.hpp  moduleshellwidget.cpp  moduleshellwidget.hpp  niepceapplication.cpp  niepceapplication.hpp  niepcewindow.cpp  niepcewindow.hpp  rating_click_listener.hpp  selection_listener.hpp  selectioncontroller.cpp  selectioncontroller.hpp  workspacecontroller.cpp  workspacecontroller.hpp
test/: meson.build
(+91 files in other folders)
