[workspace]
resolver = "2"
members = [
     "crates/npc-fwk",
     "crates/npc-engine",
     "crates/rtengine",
     "crates/npc-craw",
     "niepce-main",
]

[profile.dev.package.tiff]
opt-level = 3
[profile.dev.package.jpeg-decoder]
opt-level = 3
[profile.dev.package.weezl]
opt-level = 3
[profile.dev.package.zune-core]
opt-level = 3
[profile.dev.package.zune-jpeg]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.flate2]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3
[profile.dev.package.md-5]
opt-level = 3

[patch.crates-io]
