[package]
name = "niepce"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
build = "build.rs"
edition = "2018"
license = "GPL-3.0"

[dependencies]
async-channel = "1.6.1"
cairo-sys-rs = "*"
cairo-rs = "*"
chrono = "0.4.23"
cxx = { version = "1.0", features = [ "c++17" ] }
gdk4 = "*"
gdk4-sys = "*"
gdk-pixbuf = "*"
gdk-pixbuf-sys = "*"
gettext-rs = { version = "0.7.0", features = [ "gettext-system" ] }
gio-sys = "*"
gio = "*"
glib = "*"
graphene-rs = "0.17"
gtk4-sys = "*"
gtk4 = { version = "*", features = [ "v4_6" ] }
gtk-macros = "0.3.0"
i18n-format = "0.2.0"
lazy_static = "^1.4.0"
libadwaita = "*"
libc = "0.2.39"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "^1.12.0"

npc-fwk = { path = "../crates/npc-fwk" }
npc-engine = { path = "../crates/npc-engine" }
npc-craw = { path = "../crates/npc-craw" }

[build-dependencies]
system-deps = "6.0"

[package.metadata.system-deps]
"gtkmm-4.0" = "4.4.0"
"shumate-1.0" = "1.0.0"

[lib]
name = "niepce_core"
crate-type = ["staticlib", "lib"]

[[example]]
name = "widget-test"
