[package]
name = "niepce"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
build = "build.rs"
edition = "2024"
license = "GPL-3.0"
rust-version = "1.85"

[dependencies]
async-channel = "2.5.0"
chrono = "0.4.23"
cxx = { version = "1.0", features = [ "c++17" ] }
gettext-rs = { version = "^0.7.0", features = [ "gettext-system" ] }
gtk-macros = "0.3.0"
i18n-format = "0.3.0"
lazy_static = "^1.4.0"
libc = "0.2.39"
nix = { version = "0.30", features = [ "process" ] }
num-derive = "0.4.2"
num-traits = "0.2.18"
thiserror = "*"

npc-fwk = { path = "../crates/npc-fwk" }
npc-engine = { path = "../crates/npc-engine" }
npc-craw = { path = "../crates/npc-craw" }

[lib]
name = "niepce_core"

[[example]]
name = "widget-test"
