[package]
name = "npc-engine"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
edition = "2018"
build = "build.rs"
description = "The Niepce engine. Internal crate."
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.6.1"
chrono = "0.4.19"
exempi2 = { version = "0.1.2" }
gettext-rs = "0.7.0"
gdk-pixbuf-sys = "*"
gdk-pixbuf = "*"
glib = "*"
lazy_static = "^1.2.0"
libc = "0.2.39"
maplit = "1.0.2"
lrcat-extractor = { version = "0.2.1" }
# Must be in sync with lrcat-extractor
rusqlite = { version = "0.26.3", features = ["functions"] }

npc-fwk = { path = "../npc-fwk" }

# optional dependpencies
clap = { version = "2.33.3", optional = true }
toml = { version = "0.5", optional = true }
serde = { version = "*", optional = true }
serde_derive = { version = "^1.0", optional = true }

[build-dependencies]
cbindgen = { version = "0.20.0" }

[[bin]]
name = "importlr"
required-features = ["binaries"]

[features]
binaries = ["clap", "toml", "serde", "serde_derive"]
