[package]
name = "npc-engine"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
edition = "2018"
description = "The Niepce engine. Internal crate."
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.6.1"
chrono = "0.4.23"
cxx = { version = "1.0", features = [ "c++17" ] }
exempi2 = "0.1.3"
gettext-rs = "0.7.0"
gdk-pixbuf-sys = "*"
gdk-pixbuf = "*"
glib = "*"
lazy_static = "^1.2.0"
libc = "0.2.39"
maplit = "1.0.2"
lrcat-extractor = { version = "0.3.0" }
# Must be in sync with lrcat-extractor
rusqlite = { version = "0.28.0", features = ["functions", "backup", "bundled"] }

npc-fwk = { path = "../npc-fwk" }

# optional dependpencies
clap = { version = "4.0.19", optional = true }
toml = { version = "0.5", optional = true }
serde = { version = "*", optional = true }
serde_derive = { version = "^1.0", optional = true }

[[bin]]
name = "importlr"
required-features = ["binaries"]

[features]
binaries = ["clap", "toml", "serde", "serde_derive"]
