[package]
name = "npc-fwk"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.6.1"
cairo-rs = "*"
chrono = "0.4.0"
cxx = { version = "1.0", features = [ "c++17" ] }
exempi2 = { version = "0.2.0" }
gio = "^0.19"
glib = "^0.19"
gdk4 = "^0.8"
gdk-pixbuf = "^0.19"
gettext-rs = { version = "0.7.0", features = [ "gettext-system" ] }
gphoto2 = "3.2.3"
graphene-rs = "0.19"
gtk4 = { version = "^0.8", features = [ "gnome_43" ] }
image = { version = "0.24.5", features = [ "png" ], default-features = false }
lazy_static = "^1.2.0"
libadwaita = { version = "^0.6.0", features = [ "v1_4" ] }
libc = "0.2.39"
libheif-rs = "1.0.0"
libopenraw = "0.4.0-alpha.3"
shumate = { version = "0.5.0", package = "libshumate" }
multimap = "0.9.0"
mime_guess = "2.0.4"
nix = { version = "0.27", features = [ "fs" ] }
num-traits = "0.2"
once_cell = "^1.12.0"
rexiv2 = "^0.10.0"
tempfile = "3.4.0"
thiserror = "1"
walkdir = "2.3.3"
anyhow = "1.0.81"
