[package]
name = "npc-fwk"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
edition = "2024"
license = "GPL-3.0"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { package = "libadwaita", version = "^0.8.0", features = [ "v1_4" ] }
anyhow = "1.0.81"
async-channel = "2.5.0"
chrono = "0.4.0"
configparser = "3.1.0"
exempi2 = { version = "0.3.0" }
gettext-rs = { version = "^0.7.0", features = [ "gettext-system" ] }
gio = { version = "*", features = [ "v2_74" ] }
gphoto2 = "3.3.0"
gstreamer = "0.24.0"
gtk4 = { version = "0.10", features = [ "v4_12" ] }
image = { version = "0.25.6", features = [ "png", "jpeg", "tiff", "avif", "avif-native" ], default-features = false }
lazy_static = "^1.2.0"
libc = "0.2.39"
# 1.1.0 change the sys crate.
libheif-rs = { version = "2.3.0", default-features = false, features = [ "v1_17" ] }
libopenraw = "0.4.0-alpha.12"
multimap = "0.10.0"
# The return values are not guaranted so we pin the version.
mime_guess = "=2.0.5"
nix = { version = "0.30", features = [ "fs" ] }
num-traits = "0.2"
once_cell = "^1.12.0"
rexiv2 = "^0.10.0"
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
shumate = { version = "0.7.0", package = "libshumate" }
tempfile = "3.4.0"
thiserror = "2"
walkdir = "2.3.3"
