[package]
name = "npc-python"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
edition = "2024"
license = "GPL-3.0"
rust-version = "1.85"

[dependencies]
gtk-macros = "0.3.0"
pyo3 = { version = "0.27", features = [ "auto-initialize" ] }
sourceview5 = "0.10.0"

npc-fwk = { path = "../npc-fwk" }
