[package]
name = "rtengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = { version = "1.0", features = [ "c++17" ] }
thiserror = "*"

npc-fwk = { path = "../npc-fwk" }

[build-dependencies]
cxx-build = "1.0"
pkg-config = "0.3.26"
