[package]
name = "rtengine"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = { version = "1.0", features = [ "c++17" ] }
thiserror = "*"

npc-fwk = { path = "../npc-fwk" }

[build-dependencies]
cxx-build = "1.0"
system-deps = "7.0"

[package.metadata.system-deps]
exiv2 = "*"
expat = "2.1"
fftw3f = "*"
"giomm-2.68" = "2.68"
"glibmm-2.68" = "2.68"
lcms2 = "2.6"
lensfun = "*"
libiptcdata = "*"
libjpeg = "*"
libpng16 = "*"
libtiff-4 = "4.0.4"
libraw_r = "0.21"
zlib = "*"